--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <header>
       <div class="logo">
         <img src="./images/accueil/logo.png" alt="">
-        <h1>test</h1>
+        <h1>Lovem</h1>
       </div>
       <!-- menu responsive -->
       <div class="toggle-menu"></div>
@@ -36,19 +36,19 @@
     <section id="blog" class="py-5">
       <div class="container">
         <div class="row">
-          <img alt="" src="./images/accueil/profil.jpg">
+          <img alt="" src="./images/blog/blog1.jpg">
           <h2>Efficacité des traitements psychologiques</h2>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, nulla nam veniam qui id quae aliquid mollitia nesciunt expedita fugiat. Possimus obcaecati, dolores ducimus aspernatur magni voluptates reiciendis unde voluptatem ullam. Perspiciatis, reprehenderit recusandae. Corrupti unde molestiae laborum numquam dignissimos ab hic quia, libero nemo quis dolor ad similique quam itaque? Quo quod, corporis eligendi vero deleniti, aliquid eius cumque eveniet, saepe fuga aspernatur optio voluptatum adipisci debitis odio veniam. Sunt cupiditate, nisi quam deleniti dolores vero aperiam possimus saepe quibusdam laboriosam veritatis accusantium quas obcaecati, nemo inventore fugit qui aut. Facilis optio rerum ipsum labore rem, dolores praesentium incidunt.</p>
           <button>En savoir plus <i class="fa-solid fa-angles-right"></i></button>
         </div>
         <div class="row">
-          <img alt="" src="./images/accueil/profil.jpg">
+          <img alt="" src="./images/blog/blog2.jpg">
           <h2>Bénéfice de la médiation</h2>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, nulla nam veniam qui id quae aliquid mollitia nesciunt expedita fugiat. Possimus obcaecati, dolores ducimus aspernatur magni voluptates reiciendis unde voluptatem ullam. Perspiciatis, reprehenderit recusandae. Corrupti unde molestiae laborum numquam dignissimos ab hic quia, libero nemo quis dolor ad similique quam itaque? Quo quod, corporis eligendi vero deleniti, aliquid eius cumque eveniet, saepe fuga aspernatur optio voluptatum adipisci debitis odio veniam. Sunt cupiditate, nisi quam deleniti dolores vero aperiam possimus saepe quibusdam laboriosam veritatis accusantium quas obcaecati, nemo inventore fugit qui aut. Facilis optio rerum ipsum labore rem, dolores praesentium incidunt.</p>
           <button>En savoir plus <i class="fa-solid fa-angles-right"></i></button>
         </div>
         <div class="row">
-          <img alt="" src="./images/accueil/profil.jpg">
+          <img alt="" src="./images/blog/blog3.jpg">
           <h2>Qu'est ce que la dépression et que faire contre?</h2>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, nulla nam veniam qui id quae aliquid mollitia nesciunt expedita fugiat. Possimus obcaecati, dolores ducimus aspernatur magni voluptates reiciendis unde voluptatem ullam. Perspiciatis, reprehenderit recusandae. Corrupti unde molestiae laborum numquam dignissimos ab hic quia, libero nemo quis dolor ad similique quam itaque? Quo quod, corporis eligendi vero deleniti, aliquid eius cumque eveniet, saepe fuga aspernatur optio voluptatum adipisci debitis odio veniam. Sunt cupiditate, nisi quam deleniti dolores vero aperiam possimus saepe quibusdam laboriosam veritatis accusantium quas obcaecati, nemo inventore fugit qui aut. Facilis optio rerum ipsum labore rem, dolores praesentium incidunt.</p>
           <button>En savoir plus <i class="fa-solid fa-angles-right"></i></button>
@@ -84,11 +84,11 @@
     </div>
     <div class="row">
       <ul>
-        <li><a>Accueil</a></li>
-        <li><a>À propos</a></li>
-        <li><a>Services</a></li>
-        <li><a>Contact</a></li>
-        <li><a>Blog</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="propos.html">À propos</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </div>
     <div class="row justify-content-around pt-3 copyright">
