--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <div class="logo">
       <img src="./images/accueil/logo.png" alt="">
-      <h1>test</h1>
+      <h1>LoveM</h1>
     </div>
     <!-- menu responsive -->
     <div class="toggle-menu"></div>
@@ -27,6 +27,7 @@
         <li><a href="propos.html">À propos</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
     </ul>
   </header>
 
@@ -35,29 +36,29 @@
   <main class="container aligner">
       <div class="row">
         <div class="col-12 col-lg-6 aligner px-4 pt-5 pb-3 m-0 g-0">
-          <h2 class="bebas">Title</h2>
+          <h2>Consultation privée en santé mentale par un professionnel</h2>
           <p class="roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis a ex, ab magni sequi!</p>
-          <div class="roboto">
-            <button class="me-3 mb-3">Consultation</button>
-            <button class="mb-3">En savoir plus</button>
+          <div class="roboto consulter">
+            <button class="mx-3 mb-3"><a href="./contact.html">Consultation</a></button>
+            <button class="mx-3 mb-3"><a href="./services.html">En savoir plus</a></button>
           </div>
-          <div class="centrer-aligner roboto">
-            <div>
-              <p>20+</p>
-              <p>20+</p>
+          <div class="centrer-aligner roboto qualite mb-4">
+            <div class="satisfaction">
+              <p class="num" data-val="20"></p>
+              <p class="exp">Années d'expériences</p>
             </div>
-            <div>
-              <p>20+</p>
-              <p>20+</p>
+            <div class="satisfaction">
+              <p class="num" data-val="800"></p>
+              <p class="exp">Patients</p>
             </div>
-            <div>
-              <p>20+</p>
-              <p>20+</p>
+            <div class="satisfaction">
+              <p class="num" data-val="736"></p>
+              <p class="exp">Patients satisfait</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-6 p-0 centrer mb-5">
-          <img alt="" src="./images/accueil/profil.jpg">
+          <img alt="" src="./images/accueil/prof1.jpg">
         </div>
       </div>
   </main>
@@ -67,26 +68,26 @@
   <!-- Offres -->
   <section class="container-fluid aligner-centrer" id="offres">
     <div class="row mb-4 mt-5">
-      <h2 class="bebas">Mes services</h2>
+      <h2>Mes services</h2>
     </div>
     <div class="row justify-content-around mx-3">
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Depression Therapy</h3>
+        <img alt="" src="./images/services/depression.png">
+        <h3 class="py-3">Therapie depression</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Consultations couples</h3>
+        <img alt="" src="./images/services/couple.png">
+        <h3 class="py-3">Consultations couples</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+        <img alt="" src="./images/services/relations.png">
+        <h3 class="py-3">Relations</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
     </div>
-    <button class="text-center mb-5 roboto">Tout les services</button>
+    <button class="text-center mb-5 roboto"><a href="./services.html">Tout les services</a></button>
   </section>
 
 
@@ -94,7 +95,7 @@
   <section class="container aligner" id="conseils">
     <div class="row">
       <div class="col-12 col-lg-6 aligner px-4 pt-5 pb-3 m-0 g-0">
-        <h2 class="bebas">Dr Brooks - Conseiller et thérapeute agréé en santé mentale</h2>
+        <h2>Dr Brooks - Conseiller et thérapeute agréé en santé mentale</h2>
         <p class="roboto mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis a ex, ab magni sequi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia at in quod repellendus corrupti officiis temporibus suscipit ipsum est aliquid?</p>
         <div class="centrer-aligner roboto mb-5 row">
           <div class="me-5 col-xl-5">
@@ -109,11 +110,11 @@
           </div>
         </div>
         <div class="text-center text-lg-start">
-          <button class="mb-5">En savoir plus</button>
+          <button class="mb-5"><a href="./propos.html">En savoir plus</a></button>
         </div>
       </div>
       <div class="col-12 col-lg-6 p-0 centrer mb-5">
-        <img alt="" src="./images/accueil/profil.jpg">
+        <img alt="" src="./images/accueil/prof2.jpg">
       </div>
     </div>
   </section>
@@ -123,7 +124,7 @@
   <section id="tarifs">
     <div class="container-fluid">
       <div class="row text-center pt-5 px-4">
-        <h2 class="bebas">Tarifs</h2>
+        <h2>Tarifs</h2>
       </div>
       <div class="row px-3 py-5 text-center prestation justify-content-center">
         <p class="col-md-10 col-xl-8 col-xxl-6 roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non.</p>
@@ -132,7 +133,7 @@
         <div class="col-md-6 col-xxl-3 centrer-row mb-5">
           <div class="choix p-3 p-sm-5">
             <h3 class="pb-1">Personnel</h3>
-            <p class="bebas">99€ / H</p>
+            <p>99€ / H</p>
             <ul class="mb-5">
               <li class="yes">
                 <i class="fa-solid fa-circle-check me-2"></i> Consultation personnel
@@ -154,14 +155,14 @@
               </li>
             </ul>
             <div class="text-center">
-              <button><a href="#">Réserver</a></button>
+              <button><a href="./contact.html">Réserver</a></button>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-xxl-3 centrer-row mb-5">
           <div class="choix p-3 p-sm-5">
             <h3 class="pb-1">Couple</h3>
-            <p class="bebas">179€ / H</p>
+            <p>179€ / H</p>
             <ul class="mb-5">
               <li class="yes">
                 <i class="fa-solid fa-circle-check me-2"></i> Consultation personnel
@@ -183,14 +184,14 @@
               </li>
             </ul>
             <div class="text-center">
-              <button><a href="#">Réserver</a></button>
+              <button><a href="./contact.html">Réserver</a></button>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-xxl-3 centrer-row mb-5">
           <div class="choix p-3 p-sm-5">
             <h3 class="pb-1">Groupe</h3>
-            <p class="bebas">299€ / H</p>
+            <p>299€ / H</p>
             <ul class="mb-5">
               <li class="yes">
                 <i class="fa-solid fa-circle-check me-2"></i> Consultation personnel
@@ -212,7 +213,7 @@
               </li>
             </ul>
             <div class="text-center">
-              <button><a href="#">Réserver</a></button>
+              <button><a href="./contact.html">Réserver</a></button>
             </div>
           </div>
         </div>
@@ -222,7 +223,7 @@
 
 
   <!-- Questions -->
-  <h2 class="text-center mt-5 bebas">Questions les plus demandés</h2>
+  <h2 class="text-center mt-5 quest">Questions les plus demandés</h2>
   <section id="questions">
     <div class="bloc activer">
       <div class="bloc-haut">
@@ -235,7 +236,7 @@
       <div class="contenu">
           <div class="infos">
               <p class="roboto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
-              <button>Consulter</button>
+              <button><a href="./contact.html">Consulter</a></button>
           </div>
       </div>
     </div>
@@ -251,7 +252,7 @@
       <div class="contenu">
           <div class="infos">
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
-              <button>Consulter</button>
+              <button><a href="./contact.html">Consulter</a></button>
           </div>
       </div>
     </div>
@@ -267,7 +268,7 @@
       <div class="contenu">
           <div class="infos">
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
-              <button>Consulter</button>
+              <button><a href="./contact.html">Consulter</a></button>
           </div>
       </div>
     </div>
@@ -285,7 +286,7 @@
       <div class="contenu">
           <div class="infos">
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
-              <button>Consulter</button>
+              <button><a href="./contact.html">Consulter</a></button>
           </div>
       </div>
     </div>
@@ -301,7 +302,7 @@
       <div class="contenu">
           <div class="infos">
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
-              <button>Consulter</button>
+              <button><a href="./contact.html">Consulter</a></button>
           </div>
       </div>
     </div>
@@ -311,37 +312,43 @@
   <!-- Avis -->
   <section class="container-fluid aligner-centrer" id="avis">
     <div class="row mb-4 mt-5">
-      <h2 class="bebas">Ce que mes clients disent</h2>
+      <h2>Ce que mes clients disent</h2>
     </div>
     <div class="row justify-content-around mx-3 avis-clients">
-      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Depression Therapy</h3>
+      <div class="info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/femme.png" class="apostrophe">
+        <img alt="" src="./images/client/client1.jpg">
+        <h3 class="py-3">Nina</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
-      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Consultations couples</h3>
+      <div class="info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/homme.png" class="apostrophe">
+        <img alt="" src="./images/client/client7.jpg">
+        <h3 class="py-3">Mathieu</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
-      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+      <div class="info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/femme.png" class="apostrophe">
+        <img alt="" src="./images/client/client3.jpg">
+        <h3 class="py-3">Céline</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
-      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+      <div class="info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/femme.png" class="apostrophe">
+        <img alt="" src="./images/client/client4.jpg">
+        <h3 class="py-3">Sandra</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
-      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+      <div class="info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/homme.png" class="apostrophe">
+        <img alt="" src="./images/client/client5.jpg">
+        <h3 class="py-3">Paul</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
-      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+      <div class="info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/homme.png" class="apostrophe">
+        <img alt="" src="./images/client/client6.jpg">
+        <h3 class="py-3">Jean-Charles</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
     </div>
@@ -375,11 +382,11 @@
     </div>
     <div class="row">
       <ul>
-        <li><a>Accueil</a></li>
-        <li><a>À propos</a></li>
-        <li><a>Services</a></li>
-        <li><a>Contact</a></li>
-        <li><a>Blog</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="propos.html">À propos</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </div>
     <div class="row justify-content-around pt-3 copyright">
