--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
     <header>
       <div class="logo">
         <img src="./images/accueil/logo.png" alt="">
-        <h1>test</h1>
+        <h1>Lovem</h1>
       </div>
       <!-- menu responsive -->
       <div class="toggle-menu"></div>
@@ -27,42 +27,43 @@
           <li><a href="propos.html">À propos</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="blog.html">Blog</a></li>
       </ul>
     </header>
 
     <!-- Main -->
     <main class="container aligner pb-5">
       <div class="row">
-        <h1 class="text-center bebas my-5">Services</h1>
+        <h1 class="text-center my-5">Services</h1>
       </div>
       <div class="row mb-5">
-        <h2 class="text-center bebas">Procedure consultation</h2>
+        <h2 class="text-center">Procedure consultation</h2>
         <p class="text-center">Lorem ipsum dolor sit amet consectetur.</p>
       </div>
       <div class="row justify-content-around">
         <div class="info aligner px-4 px-sm-5 py-3 mb-5 mx-3">
           <p class="etape">1</p>
-          <h3>Request</h3>
+          <h3>Demande</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, minus?</p>
         </div>
         <div class="info aligner px-4 px-sm-5 py-3 mb-5 mx-3">
           <p class="etape">2</p>
-          <h3>Request</h3>
+          <h3>Écoute</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, minus?</p>
         </div>
         <div class="info aligner px-4 px-sm-5 py-3 mb-5 mx-3">
           <p class="etape">3</p>
-          <h3>Request</h3>
+          <h3>Consultation</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, minus?</p>
         </div>
         <div class="info aligner px-4 px-sm-5 py-3 mb-5 mx-3">
           <p class="etape">4</p>
-          <h3>Request</h3>
+          <h3>Examen</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, minus?</p>
         </div>
       </div>
       <div class="row justify-content-center mb-5">
-        <p class="col-10 col-lg-8 col-xxl-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem dolores pariatur eos vitae fugit commodi libero consequatur perspiciatis, corrupti reprehenderit minima doloribus accusamus nemo voluptas error qui rerum repellat deserunt. Recusandae laudantium atque ea iste, saepe exercitationem sequi tenetur ipsa dolorem quos porro ut consequatur rem, cumque eligendi sapiente velit!</p>
+        <p class="col-10 col-lg-8 col-xxl-6 text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem dolores pariatur eos vitae fugit commodi libero consequatur perspiciatis, corrupti reprehenderit minima doloribus accusamus nemo voluptas error qui rerum repellat deserunt. Recusandae laudantium atque ea iste, saepe exercitationem sequi tenetur ipsa dolorem quos porro ut consequatur rem, cumque eligendi sapiente velit!</p>
       </div>
       <div class="text-center">
         <button><a href="#">Consultation</a></button>
@@ -75,38 +76,38 @@
   <!-- Offres -->
   <section class="container-fluid aligner-centrer" id="avis">
     <div class="row mb-4 mt-5">
-      <h2 class="bebas text-center">Services</h2>
+      <h2 class="text-center">Services</h2>
       <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere, ipsa.</p>
     </div>
     <div class="row justify-content-around mx-3 avis-clients">
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Depression Therapy</h3>
+        <img alt="" src="./images/services/depression.png">
+        <h3 class="py-3">Thérapie dépression</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Consultations couples</h3>
+        <img alt="" src="./images/services/couple.png">
+        <h3 class="py-3">Consultations couples</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+        <img alt="" src="./images/services/relations.png">
+        <h3 class="py-3">Relations</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+        <img alt="" src="./images/services/anxiete.png">
+        <h3 class="py-3">Anxiété</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+        <img alt="" src="./images/services/enfant.png">
+        <h3 class="py-3">thérapie enfant</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
       <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
-        <img alt="" src="./images/accueil/profil.jpg">
-        <h3 class="bebas py-3">Relations</h3>
+        <img alt="" src="./images/services/solo.png">
+        <h3 class="py-3">Thérapie individuelle</h3>
         <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
       </div>
     </div>
@@ -117,7 +118,7 @@
   <section id="tarifs">
     <div class="container-fluid">
       <div class="row text-center pt-5 px-4">
-        <h2 class="bebas">Tarifs</h2>
+        <h2>Tarifs</h2>
       </div>
       <div class="row px-3 pb-5 text-center prestation justify-content-center">
         <p class="col-md-10 col-xl-8 col-xxl-6 roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non.</p>
@@ -148,7 +149,7 @@
               </li>
             </ul>
             <div class="text-center">
-              <button><a href="#">Réserver</a></button>
+              <button><a href="./contact.html">Réserver</a></button>
             </div>
           </div>
         </div>
@@ -177,7 +178,7 @@
               </li>
             </ul>
             <div class="text-center">
-              <button><a href="#">Réserver</a></button>
+              <button><a href="./contact.html">Réserver</a></button>
             </div>
           </div>
         </div>
@@ -206,7 +207,7 @@
               </li>
             </ul>
             <div class="text-center">
-              <button><a href="#">Réserver</a></button>
+              <button><a href="./contact.html">Réserver</a></button>
             </div>
           </div>
         </div>
@@ -242,11 +243,11 @@
     </div>
     <div class="row">
       <ul>
-        <li><a>Accueil</a></li>
-        <li><a>À propos</a></li>
-        <li><a>Services</a></li>
-        <li><a>Contact</a></li>
-        <li><a>Blog</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="propos.html">À propos</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </div>
     <div class="row justify-content-around pt-3 copyright">
