--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <header>
       <div class="logo">
         <img src="./images/accueil/logo.png" alt="">
-        <h1>test</h1>
+        <h1>Lovem</h1>
       </div>
       <!-- menu responsive -->
       <div class="toggle-menu"></div>
@@ -31,9 +31,10 @@
       </ul>
     </header>
 
+    <!-- Contact -->
     <main id="contact" class="container-fluid">
       <div class="row text-center my-5">
-        <h1 class="bebas">Contactez-moi</h1>
+        <h1>Contactez-moi</h1>
       </div>
       <div class="row justify-content-center coordonnees mb-5">
         <div class="lieu centrer col-xl-6">
@@ -66,18 +67,18 @@
 
   </div>  
 
-
+  <!-- Contactez -->
   <section class="container-fluid" id="contactez">
     <div class="row">
-      <h2 class="text-center bebas my-5">Réservation</h2>
+      <h2 class="text-center my-5">Réservation</h2>
     </div>
     <div class="row test justify-content-center">
       <div class="col-12 col-lg-6 p-0 centrer mb-5">
-        <img alt="" src="./images/accueil/profil.jpg">
+        <img alt="" src="./images/accueil/prof1.jpg">
       </div>
       <div class="col-12 col-lg-6 p-0 centrer mb-5">
         <div class="formulaire">
-          <h2 class="text-center mb-3 bebas">Je suis la pour vous aider</h2>
+          <h2 class="text-center mb-3">Je suis la pour vous aider</h2>
           <form id="formulaire">
             <div class="centrer">
               <input type="text" id="fname" name="firstname" placeholder="Prénom *" class="me-2">
@@ -146,11 +147,11 @@
     </div>
     <div class="row">
       <ul>
-        <li><a>Accueil</a></li>
-        <li><a>À propos</a></li>
-        <li><a>Services</a></li>
-        <li><a>Contact</a></li>
-        <li><a>Blog</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="propos.html">À propos</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </div>
     <div class="row justify-content-around pt-3 copyright">
