--- a/propos.html
+++ b/propos.html
@@ -17,7 +17,7 @@
     <header>
       <div class="logo">
         <img src="./images/accueil/logo.png" alt="">
-        <h1>test</h1>
+        <h1>Lovem</h1>
       </div>
       <!-- menu responsive -->
       <div class="toggle-menu"></div>
@@ -27,6 +27,7 @@
           <li><a href="propos.html">À propos</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="blog.html">Blog</a></li>
       </ul>
     </header>
 
@@ -34,7 +35,7 @@
   <section class="container aligner" id="conseils">
     <div class="row">
       <div class="col-12 col-lg-6 aligner px-4 pt-5 pb-3 m-0 g-0">
-        <h2 class="bebas">Dr Brooks - Conseiller et thérapeute agréé en santé mentale</h2>
+        <h2>Dr Brooks - Conseiller et thérapeute agréé en santé mentale</h2>
         <p class="roboto mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis a ex, ab magni sequi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia at in quod repellendus corrupti officiis temporibus suscipit ipsum est aliquid?</p>
         <div class="centrer-aligner roboto mb-5 row">
           <div class="me-5 col-xl-5">
@@ -49,25 +50,25 @@
           </div>
         </div>
         <div class="text-center text-lg-start">
-          <button class="mb-5">En savoir plus</button>
+          <button class="mb-5"><a href="./services.html">En savoir plus</a></button>
         </div>
       </div>
       <div class="col-12 col-lg-6 p-0 centrer mb-5">
-        <img alt="" src="./images/accueil/profil.jpg">
+        <img alt="" src="./images/accueil/prof3.jpg">
       </div>
     </div>
     <div class="row justify-content-center mb-5">
       <div class="col-10 col-sm-5 col-lg-3 mx-3 mb-5 text-center">
-        <p>20+</p>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p class="num">+ 20</p>
+        <p class="exp">Années d'expériences</p>
       </div>
       <div class="col-10 col-sm-5 col-lg-3 mx-3 mb-5 text-center">
-        <p>20+</p>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p class="num">+ 800</p>
+        <p class="exp">patients</p>
       </div>
       <div class="col-10 col-sm-5 col-lg-3 mx-3 mb-5 text-center">
-        <p>20+</p>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p class="num">+ 736</p>
+        <p class="exp">patients satisfait</p>
       </div>
     </div>
   </section>
@@ -131,9 +132,9 @@
 
   <!-- Experiences -->
   <section id="experience">
-    <h2 class="bebas text-center mb-5">Mon expérience</h2>
+    <h2 class="text-center mb-5">Mon expérience</h2>
     <div class="row justify-content-center">
-      <div class="col-12 col-sm-10 col-lg-9 col-xxl-7">
+      <div class="col-12 col-sm-10 col-lg-9 col-xxl-7 text-center">
         <strong class="roboto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum sit nobis magni odio officiis autem expedita harum, iusto, ipsam reprehenderit nemo facere enim veritatis commodi aperiam repellat debitis a similique modi molestiae necessitatibus laboriosam. Quis similique alias est impedit sed veniam commodi a vel perspiciatis optio obcaecati omnis voluptates sint dignissimos praesentium doloremque, et placeat odio nihil in beatae animi consectetur nemo expedita. Nisi reiciendis quos dignissimos repudiandae quas corporis nostrum tempora qui impedit doloribus, aspernatur ipsa recusandae consequuntur esse debitis? Tenetur magni cupiditate accusamus veniam saepe qui sed quod ex autem vero recusandae quam iusto facere optio dolore omnis rem id eligendi voluptate in maxime laborum dolorum, obcaecati impedit. Dicta sequi obcaecati similique quisquam quidem. Laborum fugiat perspiciatis consequatur rem autem voluptas assumenda veniam. Optio possimus aliquam, eos error dolores repellendus rerum. Natus qui repellendus optio sed repudiandae aperiam aspernatur iste ratione, id dolorum inventore nostrum enim voluptatibus perspiciatis! Expedita optio dignissimos perspiciatis iste tempore illo, odio voluptatum alias modi nostrum asperiores?</strong>
       </div>
     </div>
@@ -142,15 +143,15 @@
 
   <!-- Photos -->
   <section id="photos" class="container-fluid">
-    <h2 class="bebas text-center mb-5">Photos de la classe</h2>
+    <h2 class="text-center mb-5">Photos de la classe</h2>
     <div class="centrer">
       <div class="photo">
-        <img alt="" src="./images/propos/diplome1.png">
-        <img alt="" src="./images/propos/diplome2.jpg">
-        <img alt="" src="./images/propos/diplome3.jpg">
-        <img alt="" src="./images/propos/diplome4.jpg">
-        <img alt="" src="./images/propos/diplome5.jpg">
-        <img alt="" src="./images/propos/diplome6.jpg">
+        <img alt="" src="./images/classe/classe1.jpg">
+        <img alt="" src="./images/classe/classe2.jpg">
+        <img alt="" src="./images/classe/classe3.jpg">
+        <img alt="" src="./images/classe/classe4.jpg">
+        <img alt="" src="./images/classe/classe5.jpg">
+        <img alt="" src="./images/classe/classe6.jpg">
       </div>
     </div>
   </section>
@@ -183,11 +184,11 @@
     </div>
     <div class="row">
       <ul>
-        <li><a>Accueil</a></li>
-        <li><a>À propos</a></li>
-        <li><a>Services</a></li>
-        <li><a>Contact</a></li>
-        <li><a>Blog</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="propos.html">À propos</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </div>
     <div class="row justify-content-around pt-3 copyright">
